# repository

./: CMakeLists.txt  CMakeLists.txt.user.2767db5  README.md  businesswindow.cpp  businesswindow.h  countdownthread.cpp  countdownthread.h  customer.cpp  customer.h  evaluatewindow.cpp  evaluatewindow.h  evaluatewindow.ui  function.cpp  function.h  main.cpp  mymainwindow.cpp  mymainwindow.h  mymainwindow.ui  queue.cpp  queue.h  textfinder.qrc  utils.cpp  utils.h  vipthread.cpp  vipthread.h  vipwindow.cpp  vipwindow.h  vipwindow.ui  welcomewindow.cpp  welcomewindow.h  welcomewindow.ui  winsthread.cpp  winsthread.h
data/: evaluation.txt
